Sat Jan  5 06:37:12 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: add phoenix subdriver to the list. Thanks
   Boris Kleint for pointing this out.

Fri Jan  4 17:46:40 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: Rename the "send_Z" command to "reset.input.minmax"

Fri Jan  4 06:56:22 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: added reconnect support based on the code
   from tripplite_usb driver.

Wed Jan  2 20:17:48 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/hidparser.c: Parsing continues if the HID path for a report
   ends in 0x00000000 (these will not be made available). Commonly used
   as placeholders.

Wed Jan  2 19:59:21 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/libhid.[ch]: In HIDDumpTree() show all reports that are parsed
   from the report descriptor. Remove parameter from HIDGetItemData() and
   HIDGetDataItem() that is never used.
 - drivers/usbhid.c: Implemented the above.

Tue Jan  1 15:31:01 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/usbhid-ups.c: Don't use the data we receive through input
   reports, but retreive it by polling for the feature report (only the
   report number is used to determine which one to get).

Mon Dec 31 16:30:50 GMT 2007 / Charles Lepple <clepple@gmail.com>

 - include/Makefile.am: remove GNU Make extensions from rule to create
   nut_version.h, and handle case where svnversion does not exist.

Mon Dec 31 15:54:23 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - include/Makefile.am: fix failure to build after "make clean", since
   nut_stdint.h is built by configure, not make.

Sat Dec 30 12:16:12 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - drivers/megatec.c: qualify nominal values and frequency as "input" again.

Sat Dec 29 20:16:37 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - drivers/megatec.c: detect OB status while OFF.
